tests/nightly/function/compile_fail/extra_precondition.stderr
error[E0308]: mismatched types
 --> $DIR/extra_precondition.rs:8:5
  |
8 | /     #[assure("must be bar", reason = "is bar")]
9 | |     #[assure("must be baz", reason = "is baz")]
  | |_______________________________________________^ expected a tuple with 1 element, found one with 2 elements
  |
  = note: expected struct `std::marker::PhantomData<(pre::CustomConditionHolds<"must be bar">,)>`
             found struct `std::marker::PhantomData<(pre::CustomConditionHolds<"must be bar">, pre::CustomConditionHolds<"must be baz">)>`
